# dagent

./: .gitignore  HANDOFF.md  README.md  config.yaml  pyproject.toml
dagent/: __init__.py  config.py  factory.py  profiles.py
dagent/api/: __init__.py  app.py
dagent/harness/: __init__.py  control_plane.py  dag_executor.py  dag_review.py  dag_validation.py  feedback_learner.py  planner.py  profiled_agent.py  trace_recorder.py
dagent/harness_runtime/: __init__.py  agent_loop.py  control_plane.py  control_tools.py  dag_creator.py  dag_executor.py  dag_review.py  dag_validation.py  feedback_learner.py  planner.py  profiled_agent.py  runtime.py  trace_recorder.py
dagent/providers/: __init__.py  base.py  mock.py  openai_compatible.py
dagent/runtime/: __init__.py  agent_loop.py
dagent/schemas/: __init__.py  dag.py  edge.py  execution.py  feedback.py  node.py  trace.py
dagent/state/: __init__.py  prompt_builder.py
dagent/tools/: __init__.py  boundary.py  command_tools.py  executor.py  file_tools.py  registry.py
profiles/: dag_reviewer.yaml  feedback_learner.yaml  planner.yaml
profiles/conversation/: agent.md  guideline.md  memory.md  profile.yaml  soul.md
tests/: test_agent_loop.py  test_api.py  test_config.py  test_dag_executor.py  test_dag_validation.py  test_harness_flow.py  test_harness_runtime.py  test_minimax_integration.py  test_openai_compatible_provider.py  test_profiled_agents.py  test_profiles.py  test_prompt_builder.py  test_real_harness_flow.py  test_tools.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+25 files in other folders)
